Applied patch from jira issue OFBIZ-2984 - HTML cleanup for Product Detail page. In this patch table are removed for non tabular data and used div, and add CSS code for layout issue that created due to this cleanup.
Thanks Rohit for the contribution.

git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@835861 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/images/webapp/images/ecommain.css
+++ b/framework/images/webapp/images/ecommain.css
@@ -1029,3 +1029,46 @@ width: 135px;
 #microcart li#googleCheckoutEnabled img, #microcart li#googleCheckoutDisabled img {
 width: 145px;
 }
+/*===================For ProductDetail page.===========================================*/
+#productdetail {
+width: 670px;
+display: inline-block;
+}
+
+#productImageBox {
+width: 770px;
+border-top: 1px #BBBBBB solid;
+display: inline-block;
+}
+div.additionalImage {
+width: 200px;
+}
+
+#detailImageBox {
+float: left;
+height: 800px;
+width: 272px;
+}
+#additionalImageBox {
+float: left;
+width: 272px;
+}
+
+#productDetailBox {
+float: right;
+height: 266px;
+padding: 266px 0;
+width: 200px;
+}
+
+#addItemForm {
+clear: both;
+width : 600px;
+border-top: 1px #BBBBBB solid;
+}
+
+#paginationBox {
+width : 600px;
+border-top: 1px #BBBBBB solid;
+border-bottom: 1px #BBBBBB solid;
+}
